# ropt-dakota

./: .gitignore  README-PyPI.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  static-checks.yml  tests.yml
0.18/: index.html
0.20/: 404.html
0.22/: 404.html  index.html
0.23/: index.html  objects.inv
0.24/search/: search_index.json
0.25/: 404.html  index.html
0.25/search/: search_index.json
0.26/: 404.html
dev/: 404.html  index.html  objects.inv
dev/search/: search_index.json
docs/: index.md
docs/snippets/: dakota.md
src/ropt_dakota/: __init__.py  dakota.py
tests/: conftest.py  test_dakota_backend.py  test_doc.py
